--- a/pipelime/lm_assetManager.ui
+++ b/pipelime/lm_assetManager.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>773</width>
-    <height>777</height>
+    <width>837</width>
+    <height>841</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -220,7 +220,21 @@
              </size>
             </property>
             <property name="text">
-             <string>New</string>
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>:/icons/icons/io_CAMIN.png</normaloff>
+              <normalon>:/icon/incrementalSave.svg</normalon>:/icons/icons/io_CAMIN.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>30</width>
+              <height>30</height>
+             </size>
+            </property>
+            <property name="flat">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -252,6 +266,10 @@
             </property>
             <property name="text">
              <string/>
+            </property>
+            <property name="icon">
+             <iconset resource="../icons/lm_assetManager.qrc">
+              <normaloff>:/icon/multiRef.svg</normaloff>:/icon/multiRef.svg</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -332,6 +350,10 @@
             <property name="text">
              <string/>
             </property>
+            <property name="icon">
+             <iconset resource="../icons/lm_assetManager.qrc">
+              <normaloff>:/icon/io_Llama.svg</normaloff>:/icon/io_Llama.svg</iconset>
+            </property>
             <property name="iconSize">
              <size>
               <width>30</width>
@@ -356,35 +378,58 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="QPushButton" name="pushButton_thumb">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
+         <layout class="QVBoxLayout" name="verticalLayout_7">
+          <property name="topMargin">
+           <number>0</number>
           </property>
-          <property name="minimumSize">
-           <size>
-            <width>100</width>
-            <height>100</height>
-           </size>
+          <property name="rightMargin">
+           <number>0</number>
           </property>
-          <property name="maximumSize">
-           <size>
-            <width>200</width>
-            <height>200</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>thumbnail</string>
-          </property>
-          <property name="iconSize">
-           <size>
-            <width>200</width>
-            <height>200</height>
-           </size>
-          </property>
-         </widget>
+          <item>
+           <widget class="QPushButton" name="pushButton_thumb">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>100</width>
+              <height>100</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>200</width>
+              <height>200</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>thumbnail</string>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>200</width>
+              <height>200</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="verticalSpacer">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
         </item>
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -410,7 +455,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QLabel" name="label_4">
+             <widget class="QLabel" name="label_userName">
               <property name="text">
                <string>-</string>
               </property>
@@ -450,7 +495,7 @@
             <property name="maximumSize">
              <size>
               <width>16777215</width>
-              <height>200</height>
+              <height>162</height>
              </size>
             </property>
             <property name="placeholderText">
@@ -458,7 +503,36 @@
             </property>
            </widget>
           </item>
+          <item>
+           <spacer name="verticalSpacer_5">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
          </layout>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </item>
@@ -468,6 +542,19 @@
          <enum>Qt::Horizontal</enum>
         </property>
        </widget>
+      </item>
+      <item>
+       <spacer name="verticalSpacer_4">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_5">
@@ -534,14 +621,20 @@
           <property name="minimumSize">
            <size>
             <width>90</width>
-            <height>30</height>
+            <height>50</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>30</width>
-            <height>30</height>
+            <height>50</height>
            </size>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background-image: url(:/icon/incrementalSave.svg);
+background-repeat: no-repeat;
+background-position: middle center;
+text-align: bottom center;</string>
           </property>
           <property name="text">
            <string>Increment</string>
@@ -552,50 +645,49 @@
             <height>30</height>
            </size>
           </property>
+          <property name="flat">
+           <bool>true</bool>
+          </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="pushButton_publish">
           <property name="minimumSize">
            <size>
-            <width>104</width>
-            <height>30</height>
+            <width>80</width>
+            <height>50</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>30</width>
-            <height>30</height>
+            <height>50</height>
            </size>
+          </property>
+          <property name="layoutDirection">
+           <enum>Qt::LeftToRight</enum>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background-image: url(:/icon/io_publishModel.svg);
+background-repeat: no-repeat;
+background-position: middle center;
+text-align: bottom center;</string>
           </property>
           <property name="text">
            <string>Publish</string>
           </property>
           <property name="iconSize">
            <size>
-            <width>60</width>
+            <width>30</width>
             <height>30</height>
            </size>
+          </property>
+          <property name="flat">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
        </layout>
-      </item>
-      <item>
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Expanding</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>200</height>
-         </size>
-        </property>
-       </spacer>
       </item>
      </layout>
     </item>
@@ -606,14 +698,16 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>773</width>
+     <width>837</width>
      <height>21</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="../icons/lm_assetManager.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>pushButton_new</sender>
