--- a/pipelime/lm_assetManager.ui
+++ b/pipelime/lm_assetManager.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>870</width>
-    <height>871</height>
+    <width>603</width>
+    <height>872</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -56,7 +56,13 @@
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="pushButton_addProject">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>30</height>
+           </size>
+          </property>
           <property name="maximumSize">
            <size>
             <width>30</width>
@@ -65,9 +71,12 @@
           </property>
           <property name="font">
            <font>
+            <family>Arial</family>
             <pointsize>12</pointsize>
             <weight>75</weight>
             <bold>true</bold>
+            <underline>false</underline>
+            <kerning>true</kerning>
            </font>
           </property>
           <property name="text">
@@ -78,7 +87,41 @@
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_removeProject">
+          <property name="minimumSize">
+           <size>
+            <width>30</width>
+            <height>30</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>30</width>
+            <height>30</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <family>Arial</family>
+            <pointsize>12</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
+          <property name="text">
+           <string>-</string>
+          </property>
+         </widget>
+        </item>
        </layout>
+      </item>
+      <item>
+       <widget class="Line" name="line_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -219,6 +262,9 @@
               <height>30</height>
              </size>
             </property>
+            <property name="toolTip">
+             <string>Create new asset</string>
+            </property>
             <property name="text">
              <string>New</string>
             </property>
@@ -247,6 +293,9 @@
               <height>30</height>
              </size>
             </property>
+            <property name="toolTip">
+             <string>Reference assets into scene</string>
+            </property>
             <property name="statusTip">
              <string>Reference Asset</string>
             </property>
@@ -264,13 +313,19 @@
             </property>
             <property name="icon">
              <iconset resource="../icons/lm_assetManager.qrc">
-              <normaloff>:/icon/multiRef.svg</normaloff>:/icon/multiRef.svg</iconset>
+              <normaloff>:/icon/addRefs.svg</normaloff>:/icon/addRefs.svg</iconset>
             </property>
             <property name="iconSize">
              <size>
               <width>30</width>
               <height>30</height>
              </size>
+            </property>
+            <property name="autoDefault">
+             <bool>true</bool>
+            </property>
+            <property name="default">
+             <bool>true</bool>
             </property>
             <property name="flat">
              <bool>true</bool>
@@ -291,6 +346,12 @@
               <height>30</height>
              </size>
             </property>
+            <property name="toolTip">
+             <string>Import assets into scene</string>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
+            </property>
             <property name="text">
              <string/>
             </property>
@@ -303,6 +364,12 @@
               <width>30</width>
               <height>30</height>
              </size>
+            </property>
+            <property name="autoDefault">
+             <bool>true</bool>
+            </property>
+            <property name="default">
+             <bool>true</bool>
             </property>
             <property name="flat">
              <bool>true</bool>
@@ -323,16 +390,6 @@
            </spacer>
           </item>
           <item>
-           <widget class="QLabel" name="label_3">
-            <property name="text">
-             <string>Edit</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignBottom|Qt::AlignHCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item>
            <widget class="QPushButton" name="pushButton_edit">
             <property name="minimumSize">
              <size>
@@ -345,6 +402,9 @@
               <width>30</width>
               <height>30</height>
              </size>
+            </property>
+            <property name="toolTip">
+             <string>Edit asset</string>
             </property>
             <property name="text">
              <string/>
@@ -403,6 +463,9 @@
               <width>200</width>
               <height>200</height>
              </size>
+            </property>
+            <property name="toolTip">
+             <string>Click to take screenshot</string>
             </property>
             <property name="text">
              <string>thumbnail</string>
@@ -543,6 +606,104 @@
        </widget>
       </item>
       <item>
+       <widget class="QTableWidget" name="tableWidget_assetVersions">
+        <property name="alternatingRowColors">
+         <bool>true</bool>
+        </property>
+        <property name="selectionMode">
+         <enum>QAbstractItemView::SingleSelection</enum>
+        </property>
+        <property name="selectionBehavior">
+         <enum>QAbstractItemView::SelectRows</enum>
+        </property>
+        <property name="showGrid">
+         <bool>true</bool>
+        </property>
+        <property name="gridStyle">
+         <enum>Qt::DotLine</enum>
+        </property>
+        <property name="sortingEnabled">
+         <bool>true</bool>
+        </property>
+        <attribute name="horizontalHeaderCascadingSectionResizes">
+         <bool>true</bool>
+        </attribute>
+        <attribute name="horizontalHeaderDefaultSectionSize">
+         <number>200</number>
+        </attribute>
+        <attribute name="horizontalHeaderHighlightSections">
+         <bool>true</bool>
+        </attribute>
+        <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+         <bool>true</bool>
+        </attribute>
+        <attribute name="horizontalHeaderStretchLastSection">
+         <bool>true</bool>
+        </attribute>
+        <attribute name="verticalHeaderVisible">
+         <bool>false</bool>
+        </attribute>
+        <attribute name="verticalHeaderCascadingSectionResizes">
+         <bool>false</bool>
+        </attribute>
+        <row>
+         <property name="text">
+          <string>New Row</string>
+         </property>
+        </row>
+        <row>
+         <property name="text">
+          <string>New Row</string>
+         </property>
+        </row>
+        <column>
+         <property name="text">
+          <string>Filename</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Artist</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Date</string>
+         </property>
+        </column>
+        <item row="0" column="0">
+         <property name="text">
+          <string>fd</string>
+         </property>
+        </item>
+        <item row="0" column="1">
+         <property name="text">
+          <string>fd</string>
+         </property>
+        </item>
+        <item row="0" column="2">
+         <property name="text">
+          <string>sd</string>
+         </property>
+        </item>
+        <item row="1" column="0">
+         <property name="text">
+          <string>hg</string>
+         </property>
+        </item>
+        <item row="1" column="1">
+         <property name="text">
+          <string>hg</string>
+         </property>
+        </item>
+        <item row="1" column="2">
+         <property name="text">
+          <string>gfg</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item>
        <spacer name="verticalSpacer_4">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -601,6 +762,9 @@
             <height>50</height>
            </size>
           </property>
+          <property name="toolTip">
+           <string>Save file</string>
+          </property>
           <property name="styleSheet">
            <string notr="true">background-image: url(:/icon/save.svg);
 background-repeat: no-repeat;
@@ -634,6 +798,9 @@ text-align: bottom center;</string>
             <width>30</width>
             <height>50</height>
            </size>
+          </property>
+          <property name="toolTip">
+           <string>Increment and save file</string>
           </property>
           <property name="styleSheet">
            <string notr="true">background-image: url(:/icon/incrementalSave.svg);
@@ -669,6 +836,9 @@ text-align: bottom center;</string>
             <height>50</height>
            </size>
           </property>
+          <property name="toolTip">
+           <string>Publish asset</string>
+          </property>
           <property name="layoutDirection">
            <enum>Qt::LeftToRight</enum>
           </property>
@@ -703,7 +873,7 @@ text-align: bottom center;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>870</width>
+     <width>603</width>
      <height>21</height>
     </rect>
    </property>
