--- a/ramenRig/createCtrl.ui
+++ b/ramenRig/createCtrl.ui
@@ -31,7 +31,7 @@
         </item>
         <item>
          <property name="text">
-          <string>Dimond</string>
+          <string>Diamond</string>
          </property>
         </item>
         <item>
